Alignment fix before big css try

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,16 @@
   flex-direction: column;
 }
 
+.header-bar{
+  min-height: 2vh;
+}
+
 /*chat history*/
 .chat-box {
   border: 1px solid #ccc;
   overflow-y: auto;
   padding: 1rem;
+  max-height: 80vh;
   background-color: #fff;
   flex: 1;
   scroll-behavior: smooth;
