--- a/src/Darkmode.css
+++ b/src/Darkmode.css
@@ -8,11 +8,17 @@
   color: #f0f0f0;
 }
 
+.header-bar{
+  min-height: 2vh;
+  padding-top: 2rem;
+}
+
 /* chat history */
 .chat-box {
   border: 1px solid #444;
   overflow-y: auto;
   padding: 1rem;
+  max-height: 80vh;
   background-color: #2a2a2a;
   flex: 1;
   scroll-behavior: smooth;
